# T5-distractor-generation

./: .gitignore  T5_Trn1_Inf2.py  T5_small_yahoo_answers_qa.py  data_loader.py  gpt_oss_inference.py  main.py  pyproject.toml  test.ipynb  train.ipynb  train.py  train_generation_distractors.py  train_race.py  train_sciq.py
